src/main/resources/META-INF/resources/webjars/service/bt/jira/jira.css
#importPopup .form-group.step .control-label i {
	margin-top: 0;
}
#importPopup .form-group.step .control-label {
	margin-bottom: 0;
	padding-top: 0;
}
#importPopup .form-group.step {
	margin-bottom: 1px;
}
#importPopup .modal-body {
	top: 5%;
	max-height: inherit;
}
.service-bt-jira .jira-pie {
}
.service-bt-jira .jira-pie.zoomed {
	position: absolute;
 	z-index: 2;
}
.service-bt-jira .jira-pie canvas {
	position: relative;
}
.service-bt-jira .jira-pie.zoomed canvas {
    -webkit-transform: scale(.33); 
    -ms-transform: scale(.33); 
    -moz-transform: scale(.33);
    transform: scale(.33);
	left: -41px;
	top: -22px;
}
.service-bt-jira .jira-pie.zoomed.zoomed2 canvas {
	left: -41px;
	top: -22px;
    -webkit-transition: all 200ms ease-in;
    -webkit-transform: scale(1); 
    -ms-transition: all 200ms ease-in;
    -ms-transform: scale(1); 
    -moz-transition: all 200ms ease-in;
    -moz-transform: scale(1);
    transition: all 200ms ease-in;
    transform: scale(1);
}
.masonry-container .node.node.service-bt-jira.mode-th-list table.subscriptions th.features {
	width: 98px;
}
.masonry-container .node.node.service-bt-jira.mode-th-large table.subscriptions th.features {
	width: 98px;
}
.masonry-container .node.node.service-bt-jira table.subscriptions th.features {
	width: 86px;
}
.service-bt-jira .features .details canvas:hover {
	cursor: pointer;
}

@media (min-width: 768px) {
	.exploded .service-bt-jira .carousel-inner .item-2 {
		text-align: right;
	}
}
#slaPopup .control-label i {
	position: relative;
	right: -2px;
}

